# CTF-Desktop-Agent

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  Makefile  README.md  pyproject.toml
config/: default.yaml
docker/: Dockerfile  entrypoint.sh  supervisord.conf  tmux.conf
docker/container_api/: requirements.txt  server.py
docker/container_api/routes/: clipboard.py  filesystem.py  input.py  screenshot.py  shell.py  stream.py  webrtc.py  window.py
docker/container_api/services/: command_runner.py  display.py  file_manager.py  input_control.py  webrtc_stream.py  window_manager.py
docker/scripts/: ctf-exec.sh
docs/: reference.md
scripts/: install-remote-agent.sh
src/ctf_agent/: __main__.py
src/ctf_agent/agent/: context.py  core.py  planner.py  prompts.py
src/ctf_agent/config/: models.py  settings.py
src/ctf_agent/container/: client.py  manager.py
src/ctf_agent/hitl/: bridge.py  manager.py
src/ctf_agent/interfaces/: cli.py  mcp_server.py
src/ctf_agent/interfaces/web/: app.py
src/ctf_agent/interfaces/web/static/: app.js  index.html  style.css  webrtc-viewer.js
src/ctf_agent/llm/: base.py  claude_code_provider.py  claude_provider.py  factory.py  message_types.py  ollama_provider.py
src/ctf_agent/recording/: manager.py
src/ctf_agent/tools/: base.py  clipboard.py  file_ops.py  keyboard.py  mouse.py  registry.py  screenshot.py  shell.py  window.py
