[project]
name = "ctf-desktop-agent"
version = "0.1.0"
description = "AI-powered containerized desktop agent for CTF and security tasks"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    # LLM Providers
    "anthropic>=0.42.0",
    "ollama>=0.4.0",

    # Container Management
    "docker>=7.0.0",

    # HTTP Client
    "httpx>=0.27.0",

    # Web Framework (Web UI)
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=13.0",

    # CLI
    "click>=8.1.0",
    "rich>=13.0.0",

    # Configuration
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0",

    # Image Processing
    "Pillow>=10.0.0",

    # MCP Server (for Claude Code integration)
    "mcp>=1.0.0",

    # Utilities
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[project.scripts]
ctf-agent = "ctf_agent.interfaces.cli:cli"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
